--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/PlanData.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/PlanData.cshtml
@@ -312,7 +312,7 @@
                         <tr>
                             <td width="20%" align="center"><font>@plan.ShowSort</font></td>
                             <td width="50%" align="left">
-                                <font>@Html.Raw(Util.HandWinNumColorFor6(plan.Num, record.Num, plan.Sort))</font>
+                                <font>@Html.Raw(Util.HandWinNumColorFor6(plan.Num, record.Num, plan.Sort,record.Issue))</font>
                             </td>
 
                             <td width="30%" align="center">
