--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Integral.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Integral.cshtml
@@ -9,8 +9,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>积分榜</title>
+
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
-    <link href="~/css/mescroll.min.css" rel="stylesheet" />
+    <link href="~/css/null.css" rel="stylesheet" />
     <link href="~/css/dialog.css" rel="stylesheet" />
 
     <script src="~/js/jquery-1.8.3.min.js"></script>
@@ -179,7 +180,8 @@
     </script>
 </head>
 
-<body style="background:#F4F4F5;">
+<body style="background:#F4F4F5; overflow: auto;
+  -webkit-overflow-scrolling: touch;">
 
     <header class="hjc_header">
         <a href="/List/Index" class="hjc_back"></a>
