--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Gratuity.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Gratuity.cshtml
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>打赏榜</title>
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
-    <link href="~/css/mescroll.min.css" rel="stylesheet" />
+    <link href="~/css/null.css" rel="stylesheet" />
     <link href="~/css/dialog.css" rel="stylesheet" />
 
     <script src="~/js/jquery-1.8.3.min.js"></script>
