--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/FansBang.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/FansBang.cshtml
@@ -173,7 +173,7 @@
 
                         $(".Rank_ftDL").html("<dt><a href='javascript:;'><img src='" + (data.data.HeadPath == null ? '/images/default_avater.png' : data.data.HeadPath) + "'></a></dt> <dd> <p class='Ds_money1 Fs_money1 f-r'>" + data.data.Number + "</p> <div class='Rank_ftL'>"
                             + "<h3><a href='javascript:;'>" + data.data.Name + "</a></h3>"
-                            + "<P>当前排名：<span id='myrank'>" + text + "</span></P> </div> </dd>'");
+                            + "<P>当前排名：<span id='myrank'>" + text + "</span></P> </div> </dd>");
 
                     }
                 }
