--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
@@ -8823,6 +8823,17 @@ footer {
 .demo>button{background-color:#00c599;color:#fff;border:0;height:100%;margin-left:8px;padding:0 15px;border-radius:3px;font-size:12px;}
 
 
+/*下载页面*/
+.XZ_Pag{ position:relative; position:fixed; top:0; left:0; width:100%; height:100%;}
+.Pag_BGtu{ display:block; width:100%; height:100%;}
+.Pag_LJ{ position:absolute; left:0; bottom:15%; height:50px; width:100%;}
+.LJ_ul li{ height:50px;}
+.LJ_ul li a{ display:block;}
+.LJ_ul li img{ display:block; height:50px;}
+.LJ_Left{ margin-left:5%;}
+.LJ_Right{ margin-right:5%;}
+.LJ_Font{ line-height:25px; text-align:center; margin-top:25px;}
+.LJ_Font a{ font-size:14px; color:#fff; text-decoration:underline;}
 
 
 
