--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
@@ -232,7 +232,7 @@
                     lis += "          <a href='/Record/OpenRecord/?lType=" + this.lType + "' class='UL2_baif3a'>历史</a>";
                     lis += "          <a href='/Plan/Post/" + this.lType + "' class='UL2_baif3a'>发帖</a>";
                     lis += "          <a href='/Plan/Index/" + this.lType + "?cur=2' class='UL2_baif3a'>排行</a>";
-                    lis += "          <a href='/News/Index/Tool.GetLotterylType(" + this.lType + ")' class='UL2_baif3a'>资讯</a>";
+                    lis += "          <a href='/News/Index/" + this.lType + "' class='UL2_baif3a'>资讯</a>";
                     lis += "             <div style='clear: both;'></div>";
                     lis += "         </div>";
                     lis += "     </div>";
