--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/down.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/down.cshtml
@@ -11,9 +11,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>下载页面</title>
-    <link rel="stylesheet" type="text/css" href="~/css/style.css" />
+    
     <script type="text/javascript" src="/js/jquery-1.8.3.min.js"></script>
     <link href="~/css/dialog.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="~/css/style.css" />
     <script src="~/js/dialog.min.js"></script>
     <script type="text/javascript" src="~/js/yjp.js"></script>
 
@@ -22,12 +23,23 @@
    
     function getdown(type)
     {
-      
+        if (type == 2)
+        {
+            if (navigator.userAgent.indexOf('UCBrowser') > -1)
+            {
+                alert("不支持uc浏览器下载,建议使用系统自带浏览器");
+                return;
+            }
+        }
+          
         var url = getdata(type);
 
-         window.location.href = url;
+        window.location.href = url;
+
      
     }
+
+ 
 
     function getdata(ClientSource) {
         var url;
@@ -60,16 +72,19 @@
 </head>
 
 <body>
-
+   
     <div class="XZ_Pag">
-        <img src="~/images/w14_1.png" class="Pag_BGtu">
+        <img src="http://oss.c8.cn/c8/res/img/w14_1.png" class="Pag_BGtu">
         <div class="Pag_LJ">
             <ul class="LJ_ul">
-                <li class="LJ_Left f-l"><a onclick="getdown(1);" href="javascript:;"><img src="~/images/w14_2.png"></a></li>
-                <li class="LJ_Right f-r"><a onclick="getdown(2);" href="javascript:;"><img src="~/images/w14_3.png"></a></li>
+                <li class="LJ_Left f-l"><a onclick="getdown(1);" href="javascript:;"><img src="http://oss.c8.cn/c8/res/img/w14_2.png"></a></li>
+                <li class="LJ_Right f-r"><a onclick="getdown(2);" href="javascript:;"><img src="http://oss.c8.cn/c8/res/img/w14_3.png"></a></li>
                 <div style="clear:both;"></div>
             </ul>
-            <p class="LJ_Font"><a href="/Home/Index">直接进入网页版</a></p>
+            <p class="LJ_Font">
+                <a href="/Home/Explain" style="text-decoration:none;">苹果安装说明</a>
+                <br><a href="/Home/Index" style="font-size:16px;line-height:30px;">直接进入网页版</a>
+            </p>
         </div>
     </div>
 
