--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
@@ -8832,8 +8832,17 @@ footer {
 .LJ_ul li img{ display:block; height:50px;}
 .LJ_Left{ margin-left:5%;}
 .LJ_Right{ margin-right:5%;}
-.LJ_Font{ line-height:25px; text-align:center; margin-top:25px;}
-.LJ_Font a{ font-size:14px; color:#fff; text-decoration:underline;}
+.LJ_Font{ line-height:25px; text-align:center; margin-top:15px;}
+.LJ_Font a{ font-size:12px; color:#fff; text-decoration:underline;}
+
+
+/*苹果安装说明*/
+.YDY_Box{ padding:0 10px;}
+.YDY_Box .YDY_tu{ display:block; width:100%;}
+.YDY_Btit{ font-weight:normal; line-height:21px; padding:10px 0;}
+.YDY_Btit span{ display:inline-block; width:20px; height:20px; line-height:20px; text-align:center; font-size:12px; color:#fff; background:#f13131; border-radius:50%;}
+.YDY_Btit font{ font-size:14px; margin-left:5px; color:#333;}
+
 
 
 
